feat: 练习分支落地统计/成员/管理员与异常关联，并优化 reference 规则
完成 reference 演练：家庭成员与图表统计、管理员账户、个人资料改昵称改密；统一响应增加 errorId 与请求 MDC；补充单元测试。规则侧迁至 docs/reference 并同步运行副本，完善混合拆任务、docs 分层与验收门槛。

Co-authored-by: Cursor <cursoragent@cursor.com>