@@ -2,28 +2,34 @@ package com.example.ledger.common.security;
 
 import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 /**
- * Spring Security 用户主体，携带 userId 与 username。
+ * Spring Security 用户主体，携带 userId、username、role。
  */
 @Getter
 public class LoginUser implements UserDetails {
 
     private final Long userId;
     private final String username;
+    private final Integer role;
 
-    public LoginUser(Long userId, String username) {
+    public LoginUser(Long userId, String username, Integer role) {
         this.userId = userId;
         this.username = username;
+        this.role = role;
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        if (UserRoles.isAdmin(role)) {
+            return List.of(new SimpleGrantedAuthority("ROLE_ADMIN"));
+        }
+        return List.of(new SimpleGrantedAuthority("ROLE_USER"));
     }
 
     @Override
